--- a/packages/memento-agent/package.json
+++ b/packages/memento-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@memento-ai/memento-chat",
+  "name": "@memento-ai/memento-agent",
   "version": "1.0.0",
   "type": "module",
   "module": "index.ts",
@@ -14,11 +14,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@memento-ai/chat": "workspace:*",
+    "@memento-ai/conversation": "workspace:*",
     "@memento-ai/function-calling": "workspace:*",
     "@memento-ai/postgres-db": "workspace:*",
     "@memento-ai/utils": "workspace:*",
     "debug": "^4.3.4",
-    "ollama": "^0.4.4"
+    "handlebars": "^4.7.8",
+    "ollama": "^0.4.4",
+    "trace-error": "^1.0.3"
   }
 }
