--- a/packages/ingester/package.json
+++ b/packages/ingester/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@memento-ai/memento-db": "workspace:*",
     "@memento-ai/postgres-db": "workspace:*",
-    "@memento-ai/chat": "workspace:*",
+    "@memento-ai/conversation": "workspace:*",
     "debug": "^4.3.4",
     "tiktoken": "^1.0.13"
   }
