--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,8 +1,12 @@
 {
     "name": "@memento-ai/app",
     "version": "1.0.0",
+    "scripts": {
+        "check": "tsc --skipLibCheck --noEmit"
+    },
     "dependencies": {
         "@memento-ai/types": "workspace:*",
+        "@memento-ai/conversation": "workspace:*",
         "@memento-ai/embedding": "workspace:*",
         "@memento-ai/encoding": "workspace:*",
         "@memento-ai/function-calling": "workspace:*",
