--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "workspaces",
   "private": true,
+  "scripts" : {
+    "check": "for package in packages/*; do echo $package; bun --cwd $package check; done"
+  },
   "workspaces": [
+    "packages/agent",
     "packages/app",
-    "packages/chat",
+    "packages/conversation",
     "packages/embedding",
     "packages/encoding",
     "packages/function-calling",
     "packages/ingester",
-    "packages/memento-chat",
+    "packages/memento-agent",
     "packages/memento-db",
     "packages/postgres-db",
     "packages/types",
