synopsis-agent: extract package from memento-agent package

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "packages/memento-agent",
     "packages/memento-db",
     "packages/postgres-db",
+    "packages/synopsis-agent",
     "packages/types",
     "packages/utils"
   ]
