packages/bun.lockb: add resolution-agent, remove continuity-agent

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "packages/memento-db",
     "packages/postgres-db",
     "packages/readme-agents",
+    "packages/resolution-agent",
     "packages/search",
     "packages/synopsis-agent",
     "packages/types",
