config: update tests due to role

--- a/packages/config/src/test/b/memento.toml
+++ b/packages/config/src/test/b/memento.toml
@@ -11,17 +11,20 @@ database = "memento-b.db"
 provider = "anthropic"
 model = "opus"
 temperature = 1.5
+role = "memento"
 
 [synopsis_agent]
 provider = "anthropic"
 model = "haiku"
 temperature = 0.25
 max_tokens = 1000
+role = "synopsis"
 
 [resolution_agent]
 provider = "anthropic"
 model = "sonnet"
 temperature = 1.25
+role = "resolution"
 
 [conversation]
 max_exchanges = 13
