--- a/packages/synopsis-agent/package.json
+++ b/packages/synopsis-agent/package.json
@@ -11,16 +11,19 @@
     "@types/debug": "^4.1.12"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@memento-ai/agent": "^1.0.0",
+    "@memento-ai/config": "^1.0.0",
+    "@memento-ai/conversation": "^1.0.0",
+    "@memento-ai/encoding": "^1.0.0",
+    "@memento-ai/memento-db": "^1.0.0",
+    "@memento-ai/postgres-db": "^1.0.0",
+    "@memento-ai/types": "^1.0.0",
+    "@memento-ai/utils": "^1.0.0"
   },
   "dependencies": {
-    "@memento-ai/conversation": "workspace:*",
-    "@memento-ai/function-calling": "workspace:*",
-    "@memento-ai/postgres-db": "workspace:*",
-    "@memento-ai/utils": "workspace:*",
+    "ansi-colors": "^4.1.1",
     "debug": "^4.3.4",
     "handlebars": "^4.7.8",
-    "ollama": "^0.4.4",
-    "trace-error": "^1.0.3"
+    "nanoid": "^5.0.7"
   }
 }
