--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -11,18 +11,20 @@
         "@types/debug": "^4.1.12"
     },
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "@memento-ai/embedding": "^1.0.0",
+        "@memento-ai/ingester": "^1.0.0",
+        "@memento-ai/memento-db": "^1.0.0",
+        "@memento-ai/postgres-db": "^1.0.0",
+        "@memento-ai/types": "^1.0.0",
+        "@memento-ai/utils": "^1.0.0"
     },
     "dependencies": {
-        "@memento-ai/postgres-db": "workspace:*",
-        "@memento-ai/types": "workspace:*",
-        "@memento-ai/conversation": "workspace:*",
-        "@memento-ai/ingester": "workspace:*",
-        "@memento-ai/utils": "workspace:*",
+        "ansi-colors": "^4.1.3",
+        "commander": "^11.1.0",
         "debug": "^4.3.4",
         "nanoid": "^5.0.6",
         "pgvector": "^0.1.8",
         "slonik": "^40.2.1",
-        "slonik-sql-tag-raw": "^2.0.0"
+        "zod": "^3.22.4"
     }
   }
