--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,9 +11,8 @@
     "@types/debug": "^4.1.12"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "zod": "^3.22.4",
+    "trace-error": "^1.0.3"
   },
-  "dependencies": {
-    "debug": "^4.3.4"
-  }
+  "dependencies": {}
 }
