--- a/packages/ingester/package.json
+++ b/packages/ingester/package.json
@@ -11,13 +11,18 @@
     "@types/debug": "^4.1.12"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@memento-ai/agent": "^1.0.0",
+    "@memento-ai/conversation": "^1.0.0",
+    "@memento-ai/encoding": "1.0.0",
+    "@memento-ai/memento-db": "^1.0.0",
+    "@memento-ai/postgres-db": "^1.0.0",
+    "@memento-ai/types": "^1.0.0",
+    "@memento-ai/utils": "^1.0.0"
   },
   "dependencies": {
-    "@memento-ai/memento-db": "workspace:*",
-    "@memento-ai/postgres-db": "workspace:*",
-    "@memento-ai/conversation": "workspace:*",
     "debug": "^4.3.4",
-    "tiktoken": "^1.0.13"
+    "nanoid": "^5.0.7",
+    "slonik": "^40.2.1",
+    "zod": "^3.0.0"
   }
 }
