--- a/packages/function-calling/package.json
+++ b/packages/function-calling/package.json
@@ -11,22 +11,20 @@
       "@types/debug": "^4.1.12"
     },
     "peerDependencies": {
-      "typescript": "^5.0.0"
+      "@memento-ai/agent": "^1.0.0",
+      "@memento-ai/encoding": "^1.0.0",
+      "@memento-ai/memento-db": "^1.0.0",
+      "@memento-ai/postgres-db": "^1.0.0",
+      "@memento-ai/types": "^1.0.0",
+      "@memento-ai/utils": "^1.0.0"
     },
     "dependencies": {
-      "@memento-ai/types": "workspace:*",
-      "@memento-ai/memento-db": "workspace:*",
-      "@memento-ai/postgres-db": "workspace:*",
-      "@memento-ai/utils": "workspace:*",
-      "@anthropic-ai/sdk": "^0.17.1",
       "ansi-colors": "^4.1.3",
-      "bunrest": "^1.3.7",
-      "commander": "^11.1.0",
       "debug": "^4.3.4",
+      "handlebars": "4.7.8",
       "nanoid": "^5.0.6",
-      "pgvector": "^0.1.8",
       "slonik": "^40.2.1",
       "slonik-sql-tag-raw": "^2.0.0",
-      "tiktoken": "^1.0.13"
+      "zod": "3.23.8"
     }
   }
