--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,15 +4,21 @@
     "scripts": {
         "check": "tsc --skipLibCheck --noEmit"
     },
+    "peerDependencies": {
+        "@memento-ai/config": "^1.0.0",
+        "@memento-ai/conversation": "^1.0.0",
+        "@memento-ai/ingester": "^1.0.0",
+        "@memento-ai/memento-agent": "^1.0.0",
+        "@memento-ai/memento-db": "^1.0.0",
+        "@memento-ai/postgres-db": "^1.0.0",
+        "@memento-ai/readme-agents": "^1.0.0",
+        "@memento-ai/types": "^1.0.0",
+        "@memento-ai/utils": "^1.0.0"
+    },
     "dependencies": {
-        "@memento-ai/types": "^1.0.0*",
-        "@memento-ai/conversation": "^1.0.0*",
-        "@memento-ai/embedding": "^1.0.0*",
-        "@memento-ai/encoding": "^1.0.0*",
-        "@memento-ai/function-calling": "^1.0.0*",
-        "@memento-ai/memento-db": "^1.0.0*",
-        "@memento-ai/postgres-db": "^1.0.0*",
-        "@memento-ai/readme-agents": "^1.0.0*",
-        "@memento-ai/utils": "^1.0.0*"
+        "commander": "11.1.0",
+        "ansi-colors": "4.1.3",
+        "slonik": "^40.2.6",
+        "debug": "4.3.5"
     }
 }
