--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,8 @@
 # Add files here to ignore them from prettier formatting
-/dist
-/coverage
-/.nx/cache
-/.nx/workspace-data
+dist
+coverage
+.nx/cache
+/nx/workspace-data
+logs/
+*.svelte
+*.md
