--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "singleQuote": true,
-  "printWidth": 120,
-  "tabWidth": 4,
-  "semi": false
-}
+    "singleQuote": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "semi": false,
+    "plugins": ["prettier-plugin-organize-imports"]
+  }
