--- a/packages/function-calling/package.json
+++ b/packages/function-calling/package.json
@@ -9,19 +9,13 @@
     },
     "peerDependencies": {
         "@memento-ai/agent": "^1.0.0",
-        "@memento-ai/encoding": "^1.0.0",
+        "@memento-ai/function-registry": "^1.0.0",
         "@memento-ai/memento-db": "^1.0.0",
-        "@memento-ai/postgres-db": "^1.0.0",
         "@memento-ai/types": "^1.0.0",
         "@memento-ai/utils": "^1.0.0"
     },
     "dependencies": {
         "ansi-colors": "^4.1.3",
-        "debug": "^4.3.4",
-        "handlebars": "4.7.8",
-        "nanoid": "^5.0.6",
-        "slonik": "^40.2.1",
-        "slonik-sql-tag-raw": "^2.0.0",
-        "zod": "3.23.8"
+        "debug": "^4.3.4"
     }
 }
