apps/memento-cli: use createTemporaryWritable

--- a/apps/memento-cli/package.json
+++ b/apps/memento-cli/package.json
@@ -2,9 +2,11 @@
     "name": "@memento-ai/memento-cli",
     "version": "1.0.0",
     "peerDependencies": {
+        "@memento-ai/agent": "^1.0.0",
         "@memento-ai/config": "^1.0.0",
         "@memento-ai/memento-agent": "^1.0.0",
-        "@memento-ai/postgres-db": "^1.0.0"
+        "@memento-ai/postgres-db": "^1.0.0",
+        "@memento-ai/utils": "^1.0.0"
     },
     "dependencies": {
         "ansi-colors": "4.1.3",
