config: changes to schema for response tokens

--- a/packages/config/src/test/b/memento.toml
+++ b/packages/config/src/test/b/memento.toml
@@ -12,6 +12,7 @@ provider = "anthropic"
 model = "opus"
 temperature = 1.5
 role = "memento"
+max_response_tokens = 500
 
 [synopsis_agent]
 provider = "anthropic"
@@ -19,12 +20,14 @@ model = "haiku"
 temperature = 0.25
 max_tokens = 1000
 role = "synopsis"
+max_response_tokens = 500
 
 [resolution_agent]
 provider = "anthropic"
 model = "sonnet"
 temperature = 1.25
 role = "resolution"
+max_response_tokens = 500
 
 [conversation]
 max_exchanges = 13
