tscofig.json: emModuleInterop: true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "lib": ["ESNext"],
         "target": "ESNext",
         "module": "ESNext",
+        "esModuleInterop": true,
         "moduleDetection": "force",
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
